--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -8,6 +8,7 @@
 		Coder
 	</title>
 	
+	<script type="module" src="/@vite/client"></script>
 	<link rel="icon" type="image/jpg" href="../imgs/page-icon.svg" />
 	<link rel="stylesheet" href="../css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
@@ -47,6 +48,12 @@
 				</ul>
 			</nav>
 			<hr>
+			<section>
+				<h2 id="WebGPU">WebGPU</h2>
+				<canvas></canvas>
+				<script type="module" src="../src/basicTriangle.ts"></script>
+			</section>
+			
 			<section>
 				<h2 id="media">Media</h2>
 				<ul>
