Setting vite and WebGPU

--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -7,10 +7,9 @@
 	<title>
 		Coder
 	</title>
-	
-	<script type="module" src="/@vite/client"></script>
+
 	<link rel="icon" type="image/jpg" href="../imgs/page-icon.svg" />
-	<link rel="stylesheet" href="../css/style.css" />
+	<script type="module" src="/src/main.ts"></script>
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
@@ -48,11 +47,11 @@
 				</ul>
 			</nav>
 			<hr>
-			<section>
-				<h2 id="WebGPU">WebGPU</h2>
-				<canvas></canvas>
-				<script type="module" src="../src/basicTriangle.ts"></script>
-			</section>
+
+			<h2 id="WebGPU">WebGPU</h2>
+			<div class="canvas-body">
+				<iframe src="basicTriangle.html" title="WebGPU" name="WebGPU"></iframe>
+			</div>
 			
 			<section>
 				<h2 id="media">Media</h2>
