--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</title>
 	
 	<link rel="icon" type="image/jpg" href="imgs/page-icon.svg" />
-	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+	<script type="module" src="src/main.ts"></script>
 </head>
 <body>
 	<div class="container">
