--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<link rel="icon" type="image/jpg" href="imgs/page-icon.svg" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-	<script type="module" src="src/main.ts"></script>
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 	<div class="container">
