--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -9,7 +9,7 @@
 	</title>
 
 	<link rel="icon" type="image/jpg" href="../imgs/page-icon.svg" />
-	<script type="module" src="/src/main.ts"></script>
+	<link rel="stylesheet" href="../css/style.css" />
 	<script src="https://kit.fontawesome.com/b6bfb0c6c4.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
