--- a/pages/basicTriangle.html
+++ b/pages/basicTriangle.html
@@ -23,12 +23,13 @@
         }
         canvas {
            width: 100%;
-           height: 100%; 
+           height: 100%;
+           aspect-ratio: auto;
         }
     </style>
 </head>
 <body>
     <canvas></canvas>
-    <script type="module" src="/src/basicTriangle.ts"></script>
+    <script type="module" src="../src/basicTriangle.ts"></script>
 </body>
 </html>
