Add my shader preview.

--- a/pages/basicTriangle.html
+++ b/pages/basicTriangle.html
@@ -30,6 +30,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script type="module" src="../src/basicTriangle.ts"></script>
+    <script type="module" src="../src/myShader.ts"></script>
 </body>
 </html>
