Cube shader update, time inclusion

--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -47,11 +47,12 @@
 				</ul>
 			</nav>
 			<hr>
-
-			<h2 id="WebGPU">WebGPU</h2>
-			<div class="canvas-body">
-				<iframe src="basicTriangle.html" title="WebGPU" name="WebGPU"></iframe>
-			</div>
+			<section>
+				<h2 id="WebGPU">WebGPU</h2>
+				<div class="canvas-body">
+					<iframe src="cube.html" title="WebGPU" name="WebGPU Cube"></iframe>
+				</div>
+			</section>
 			
 			<section>
 				<h2 id="media">Media</h2>
