--- a/pages/webgpu-raytracing.html
+++ b/pages/webgpu-raytracing.html
@@ -30,6 +30,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script type="module" src="../src/myComputeShader.ts"></script>
+    <script type="module" src="../src/myRaytracingShader.ts"></script>
 </body>
 </html>
