Starting UI and camera movement

--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -52,6 +52,7 @@
 				<div class="canvas-body">
 					<iframe src="webgpu-raytracing.html" title="WebGPU" name="WebGPU Raytracing"></iframe>
 				</div>
+				<a href="webgpu-raytracing.html">View in full screen</a>
 			</section>
 			
 			<section>
