Global options added to UI

--- a/pages/webgpu-raytracing.html
+++ b/pages/webgpu-raytracing.html
@@ -73,17 +73,17 @@
                     <h5>Global</h5>
                     <p class="property-title">FPS Slow Down</p>
                     <div class="input-value">
-                        <input type="range" title="Frame Rate Slow Down" min="1.0" max="10.0" step="1.0" value="2.0"/>
+                        <input type="range" id="fps-rate" title="Frame Rate Slow Down" min="1.0" max="10.0" step="1.0" value="2.0"/>
                         <p class="value">2.0</p>
                     </div>
                     <p class="property-title">Rays per Pixel</p>
                     <div class="input-value">
-                        <input type="range" title="Rays per Pixel" min="1.0" max="20.0" step="1.0" value="1.0"/>
+                        <input type="range" id="rays-per-pixel" title="Rays per Pixel" min="1.0" max="20.0" step="1.0" value="1.0"/>
                         <p class="value">1.0</p>
                     </div>
                     <div class="input-value">
-                        <input type="checkbox" id="check" class="toggle" checked>
-                        <label for="check">Frame Accumulator</label>
+                        <input type="checkbox" id="accumulator" class="toggle" checked>
+                        <label for="accumulator">Frame Accumulator</label>
                     </div>
                 </div>
             </section>
