Add WebGPU raytracing to featured works, and change profile picture with dark mode.

--- a/pages/experimental.html
+++ b/pages/experimental.html
@@ -50,9 +50,9 @@
 			<section>
 				<h2 id="WebGPU">WebGPU</h2>
 				<div class="canvas-body">
-					<iframe src="webgpu-raytracing.html" title="WebGPU" name="WebGPU Raytracing"></iframe>
+					<iframe src="cube.html" title="WebGPU" name="WebGPU Cube"></iframe>
 				</div>
-				<a href="webgpu-raytracing.html">View in full screen</a>
+				<a href="cube.html">View in full screen</a>
 			</section>
 			
 			<section>
